# profile-views-counter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  go.mod  go.sum  rustfmt.toml  server.go
app/: app.go  registry.go
app/routes/stats/: stats.go
conf/: conf.go
src/: badge.rs  datastore.rs  fetcher.rs  handler.rs  keepalive.rs  main.rs  state.rs
src/datastore/: datastore.rs  mod.rs  operations.rs  xata.rs
