[package]
name = "github-profile-views-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.14"
axum = "0.6.16"
anyhow = "1.0.70"
reqwest = "0.11.17"
thiserror = "1.0.40"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
