[package]
name = "github-profile-views-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.14"
axum = "0.6.16"
anyhow = "1.0.70"
reqwest = { version = "0.11.18", features = ["json"] }
thiserror = "1.0.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

[dev-dependencies]
mockito = "1.1.0"
pretty_assertions = "1.4.0"
serial_test = "2.0.0"